--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,30 @@
 .App {
-  text-align: center;
+  
+}
+
+*{
+  box-sizing: border-box;
+}
+
+body {
+  background: #f1f5f7;
+}
+
+h1, h2, h3, h4, h5, h5 {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  list-style: none;
+}
+
+ul, li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .App-logo {
@@ -28,11 +53,11 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes fade {
+  0%{
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    opacity: 1;
   }
 }
